# pattern-matching

./: .gitignore  Cargo.toml  README.md  bla.rs  clippy_rfc.md  coll_orig.rs  coll_patt.rs  expanded.rs  grammar.ebnf  rust_pattern_tree_expanded.rs  test.rs  test2.rs  test_pattern.rs  test_pattern_2.rs  test_pattern_func.rs  test_pattern_macro.rs  test_pattern_return_type.rs  test_pattern_return_type_2.rs  test_pattern_simple.rs  test_regex.rs
clippy-pattern-author/: Cargo.toml
clippy-pattern-author/src/: clippy_pattern_author.rs  editor.rs  lib.rs  main.rs
common/: Cargo.toml  common.rs
common/src/: common.rs
example/: Cargo.toml
example/src/: lib.rs  matchers.rs  pattern_tree.rs
gen_pattern_tree/: Cargo.toml  gen_pattern_tree.rs
gen_pattern_tree/src/: lib.rs
is-match-macro/: Cargo.toml
is-match-macro/src/: is_match_macro.rs
pattern/: Cargo.toml  pattern.rs
pattern-func/: Cargo.toml
pattern-func-lib/: Cargo.toml
pattern-func-lib/src/: pattern_func_lib.rs
pattern-func-macro/: Cargo.toml
pattern-func-macro/src/: pattern_func_macro.rs
pattern-func/pattern-func-macro/: Cargo.toml  pattern_func_macro.rs
pattern-func/src/: pattern_func.rs
pattern-macro/: Cargo.toml
pattern-macro-gen/: Cargo.toml
pattern-macro-gen-macro/: Cargo.toml
pattern-macro-gen-macro/src/: pattern_macro_gen_macro.rs
pattern-macro-gen/pattern-macro-gen-macro/: Cargo.toml  pattern_macro_gen_macro.rs
pattern-macro-gen/src/: named_subpattern_types.rs  pattern_macro_gen.rs  result_struct.rs
pattern-macro/src/: named_subpattern_types.rs  parse.rs  pattern_macro.rs  result_struct.rs
pattern-match/: Cargo.toml
pattern-match/src/: ast_match.rs  ast_match_rust_mini.rs  dummy_ast_match.rs  hir_match.rs  matchers.rs  meta_match.rs  pattern_match.rs  pattern_tree.rs  pattern_tree_meta.rs  pattern_tree_mini.rs  pattern_tree_rust.rs  pattern_tree_rust_mini.rs
pattern-parse/: Cargo.toml
pattern-parse/src/: pattern_parse.rs
pattern-tree/: Cargo.toml
pattern-tree-macro/: Cargo.toml
pattern-tree-macro/src/: pattern_tree_macro.rs
pattern-tree/pattern-tree-macro/: Cargo.toml  pattern_tree_macro.rs
pattern-tree/src/: pattern_tree.rs
pattern/pattern-macro/: Cargo.toml  pattern_macro.rs
pattern/src/: lib.rs  pattern.rs
pattern_match/: Cargo.toml  ast_match.rs  dummy_ast_match.rs  pattern_match.rs  pattern_tree.rs
pattern_tree/: Cargo.toml  matchers.rs  pattern_tree.rs
pattern_tree/src/: lib.rs  matchers.rs
src/: from_syn.rs  lib.rs  main.rs  parse.rs
test/: Cargo.toml  test.rs
test-clippy/: Cargo.toml
test-clippy/src/: main.rs  utils.rs
test-clippy/tests/: compiletest.rs
test-clippy/tests/ui/: collapsible_if.rs  collapsible_if.stderr  meta.rs  meta.stderr  mini.rs  mini.stderr  simple_pattern.rs  simple_pattern.stderr  string_pattern.rs  string_pattern.stderr  update-all-references.sh
test-pattern-func-lib/: Cargo.toml
test/src/: test.rs
