[workspace]

members = [
    "common",
    "pattern-tree-macro",
    "pattern-tree",
    "pattern-match",
    "pattern-macro",
    "pattern",
    "test",
    "test-clippy",
    "is-match-macro",
    "pattern-func-macro",
    "pattern-func-lib",
    "pattern-func",
    #"clippy-pattern-author"
    "pattern-macro-gen"
]