[package]
name = "is-match-macro"
version = "0.1.0"
authors = ["Felix Kohlgrüber <felix.kohlgrueber@gmail.com>"]
edition = "2018"

[dependencies]
quote = "0.6"
syn = {version = "0.15", features = ["full", "extra-traits"]}
proc-macro2 = "0.4.26"

[lib]
proc-macro = true
path = "src/is_match_macro.rs"
doctest = false