[package]
name = "is-match-macro"
version = "0.1.0"
authors = ["Felix Kohlgrüber <felix.kohlgrueber@gmail.com>"]
edition = "2018"

[dependencies]
quote = "1.0"
syn = {version = "1.0", features = ["full", "extra-traits"]}
proc-macro2 = "1.0"


[lib]
proc-macro = true
path = "src/is_match_macro.rs"
doctest = false