[package]
name = "pattern-macro-gen"
version = "0.1.0"
authors = ["Felix Kohlgrüber <felix.kohlgrueber@gmail.com>"]
edition = "2018"

[dependencies]
syn = {version = "0.15", features = ["full", "extra-traits"]}
quote = "0.6"
proc-macro2 = "0.4.26"

common = { path = "../common" }
pattern-parse = { path = "../pattern-parse" }
pattern-macro-gen-macro = { path = "../pattern-macro-gen-macro" }


[lib]
path = "src/pattern_macro_gen.rs"
doctest = false