[package]
name = "pattern-macro-gen"
version = "0.1.0"
authors = ["Felix Kohlgrüber <felix.kohlgrueber@gmail.com>"]
edition = "2018"

[dependencies]
quote = "1.0"
syn = {version = "1.0", features = ["full", "extra-traits"]}
proc-macro2 = "1.0"

common = { path = "../common" }
pattern-parse = { path = "../pattern-parse" }
pattern-macro-gen-macro = { path = "pattern-macro-gen-macro" }


[lib]
path = "src/pattern_macro_gen.rs"
doctest = false