[package]
name = "pattern-macro"
version = "0.1.0"
authors = ["Felix Kohlgrüber <felix.kohlgrueber@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
pattern_match = { path = "../pattern_match" }
syn = {version = "0.15", features = ["full", "extra-traits"]}
quote = "0.6"
proc-macro2 = "0.4.26"

[lib]
proc-macro = true
path = "src/pattern_macro.rs"
doctest = false