[package]
name = "pattern-match"
version = "0.1.0"
authors = ["Felix Kohlgrüber <felix.kohlgrueber@gmail.com>"]
edition = "2018"

[dependencies]
pattern-tree = { path = "../pattern-tree" }
is-match-macro = { path = "../is-match-macro" }
itertools = "0.8.0"

[lib]
path = "src/pattern_match.rs"
doctest = false