[package]
name = "pattern-parse"
version = "0.1.0"
authors = ["Felix Kohlgrüber <felix.kohlgrueber@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
syn = {version = "0.15", features = ["full", "extra-traits"]}
proc-macro2 = "0.4.26"

[lib]
path = "src/pattern_parse.rs"
doctest = false