[package]
name = "pattern-tree-macro"
version = "0.1.0"
authors = ["Felix Kohlgrüber <felix.kohlgrueber@gmail.com>"]
edition = "2018"

[dependencies]
quote = "1.0"
syn = {version = "1.0", features = ["full", "extra-traits"]}
proc-macro2 = "1.0"
lazy_static = "1.4.0"

common = { path = "../common" }

[lib]
proc-macro = true
path = "src/pattern_tree_macro.rs"
doctest = false