[package]
name = "pattern_match"
version = "0.1.0"
authors = ["Felix Kohlgrüber <felix.kohlgrueber@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
gen_pattern_tree = { path = "../gen_pattern_tree" }
lazy_static = "1.2.0"
itertools = "0.8.0"

[lib]
path = "pattern_match.rs"
doctest = false