[package]
name = "pattern_match"
version = "0.1.0"
authors = ["Felix Kohlgrüber <felix.kohlgrueber@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
pattern-tree-macro = { path = "../pattern-tree-macro" }
lazy_static = "1.2.0"
itertools = "0.8.0"

[lib]
path = "src/pattern_match.rs"
doctest = false