[package]
name = "test-clippy"
version = "0.1.0"
authors = ["Felix Kohlgrüber <felix.kohlgrueber@gmail.com>"]
edition = "2018"

[dependencies]
pattern = { path = "../pattern" }
pattern-parse = { path = "../pattern-parse" }
test-pattern-func-lib = { path = "../test-pattern-func-lib" }

[dev-dependencies]
compiletest_rs = "0.3.19"
